# miniprojet-cpp-by-chouladi-baaoui

./: .gitignore  CMakeLists.txt  README.md  Rapport_StudentManager_110.docx  StudentManager.pro
data/: students.txt
src/: main.cpp
src/exceptions/: StudentExceptions.h
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  StudentDialog.cpp  StudentDialog.h  StudentDialog.ui
src/models/: GraduateStudent.cpp  GraduateStudent.h  PhDStudent.cpp  PhDStudent.h  Student.cpp  Student.h  UndergraduateStudent.cpp  UndergraduateStudent.h
src/persistence/: PersistenceManager.cpp  PersistenceManager.h
src/services/: StudentManager.cpp  StudentManager.h
tests/: test_main.cpp
tests/tmp/: students_test.txt
